--- a/streampipes-pipeline-elements-all-jvm/pom.xml
+++ b/streampipes-pipeline-elements-all-jvm/pom.xml
@@ -94,6 +94,16 @@
             <version>0.65.1-SNAPSHOT</version>
             <classifier>embed</classifier>
         </dependency>
+
+        <!-- 3rd party dependencies to avoid convergence errors -->
+        <dependency>
+            <groupId>io.dropwizard.metrics</groupId>
+            <artifactId>metrics-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.atteo.classindex</groupId>
+            <artifactId>classindex</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
