--- a/streampipes-sinks-databases-jvm/pom.xml
+++ b/streampipes-sinks-databases-jvm/pom.xml
@@ -97,6 +97,16 @@
             <version>${ditto-client.version}</version>
         </dependency>
 
+        <!-- 3rd party dependencies to avoid convergence errors -->
+        <dependency>
+            <groupId>io.dropwizard.metrics</groupId>
+            <artifactId>metrics-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.atteo.classindex</groupId>
+            <artifactId>classindex</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
