remove SP_HOST, SP_KAFKA_HOST variable from script and env file, removed elastic and kibana from full deployment

--- a/installer/templates/.env
+++ b/installer/templates/.env
@@ -13,7 +13,5 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-SP_HOST=kafka
-SP_BACKEND_VERSION=0.65.1-SNAPSHOT
-SP_PE_VERSION=0.65.1-SNAPSHOT
+SP_VERSION=0.65.1-SNAPSHOT
 SP_DOCKER_REGISTRY=apachestreampipes
