--- a/streampipes-app-file-export/pom.xml
+++ b/streampipes-app-file-export/pom.xml
@@ -22,7 +22,7 @@
     <parent>
         <artifactId>streampipes-parent</artifactId>
         <groupId>org.apache.streampipes</groupId>
-        <version>0.66.0-SNAPSHOT</version>
+        <version>0.66.0</version>
     </parent>
 
     <name>StreamPipes App File Export</name>
@@ -34,7 +34,7 @@
         <dependency>
             <groupId>org.apache.streampipes</groupId>
             <artifactId>streampipes-storage-couchdb</artifactId>
-            <version>0.66.0-SNAPSHOT</version>
+            <version>0.66.0</version>
         </dependency>
 
         <!-- External dependencies -->
