--- a/streampipes-container-embedded/pom.xml
+++ b/streampipes-container-embedded/pom.xml
@@ -21,7 +21,7 @@
 	<parent>
 		<groupId>org.apache.streampipes</groupId>
 		<artifactId>streampipes-parent</artifactId>
-		<version>0.66.0</version>
+		<version>0.66.1-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>streampipes-container-embedded</artifactId>
@@ -32,7 +32,7 @@
 		<dependency>
 			<groupId>org.apache.streampipes</groupId>
 			<artifactId>streampipes-container</artifactId>
-			<version>0.66.0</version>
+			<version>0.66.1-SNAPSHOT</version>
 		</dependency>
 
 		<!-- External dependencies -->
