--- a/pom.xml
+++ b/pom.xml
@@ -524,6 +524,14 @@
                         <finalName>apache-streampipes-extensions-${project.version}-incubating</finalName>
                     </configuration>
                 </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-deploy-plugin</artifactId>
+                    <version>2.8.2</version>
+                    <configuration>
+                        <skip>true</skip>
+                    </configuration>
+                </plugin>
             </plugins>
         </pluginManagement>
         <plugins>
