Import Roboto font in angular.json

--- a/ui/angular.json
+++ b/ui/angular.json
@@ -26,7 +26,8 @@
               }
             ],
             "styles": [
-              "src/scss/main.scss"
+              "src/scss/main.scss",
+              "src/assets/fonts/Roboto-Regular.css"
             ],
             "scripts": [
               "node_modules/systemjs/dist/system.js",
