--- a/pom.xml
+++ b/pom.xml
@@ -941,6 +941,17 @@
                     <version>3.2.0</version>
                     <configuration>
                         <finalName>apache-streampipes-${project.version}-incubating</finalName>
+                        <descriptors>
+                            <descriptor>tools/maven/assembly.xml</descriptor>
+                        </descriptors>
+                    </configuration>
+                </plugin>
+                <plugin>
+                    <groupId>net.revelc.code.formatter</groupId>
+                    <artifactId>formatter-maven-plugin</artifactId>
+                    <version>2.11.0</version>
+                    <configuration>
+                        <lineEnding>LF</lineEnding>
                     </configuration>
                 </plugin>
             </plugins>
