[STREAMPIPES-117]: Share run configurations for core and connect-master

--- a/.gitignore
+++ b/.gitignore
@@ -30,7 +30,7 @@
 .idea/sqlDataSources.xml
 .idea/dynamic.xml
 .idea/uiDesigner.xml
-.idea
+.idea/*
 
 # Gradle:
 .idea/gradle.xml
@@ -101,7 +101,6 @@ ui/out-tsc
 ui/node_modules/
 
 # IDEs and editors
-/.idea
 .project
 .classpath
 .c9/
@@ -141,3 +140,6 @@ bundle.js.map
 
 package-lock.json
 logs/
+
+# Explicit includes
+!.idea/runConfigurations
